refactor(booking): [wip] modify tests to runnable state